
* 1612124170
 - change varnish metrics format.
 - add dontderive field to varnishmetrics.
* 1611479197
 - change target's cdnboxd.service to wait for nss resolution.
* 1608033183
 - refactoring varnishmetrics
 - fix RangeError in cdnboxPacket.js:84:26
* 1607776777
 - discard DNS packet with remote port 0
* 1604744266
 - Optimize crypto tlsticket
* 1604017875
 - Introducing cdnboxMetrics.js. Optimize crypto/eventloop
* 1603982384
 - Change timeout eventloop metric from 0 to 5 to save CPU.
* 1603955952
 - Adds eventloop and mem to /cdn/status
* 1603060693
 - adding varnishmetrics to /cdn/status. Change to varnishstat format 6.5.
* 1603060693
 - adding /cdn/status entry point.
* 1602441772
 - adding timout parameter on localtest.
* 1594541378
 - fix btoa error in error log.
 - fix out of offset error message on some EDNS record.
* 1592043604
 - Avoid IPV6 alert on cdnbox without ipv6.
 - Don't Detect/update IP changes if node is cname.
* 1590944563
 - Fix the 127.0.1.1 problem (which masks IPv6 under systemd resolver) via reverse resolution of global non local IPv6 address.

* 1590940535
 - Upgrade to NodeJS 12.

* 1569940093
 - Fix score problem when default is off.

* 1569703889
 - Detect and update when remote node's IP change via Probes.
 - Fix the 127.0.1.1 problem via whoami protocol.

* 1569225035
 - Add bw receive (now Trans and Recv in console).

* 1568660388
 - Add a separate probe for IPv6.

* 1554800344
 - Introducing TCP RTT metric collection.

* 1553472380
 - Fix JSON errors messages.

* 1553261389
 - additional records on A, AAAA and NS

* 1552559874
 - fix "cdnbox updated" JSON syntax.

* 1552142871
 - add tls ticket keys for haproxy.

* 1546777819
 - correct undefined issue when bind9 start slowly at reboot.

* 1544982708
 - changes for Node 10 compliance.
 - Probe process now auto restarts.
 - randomly run probes to avoid collision.

* 1540824449
 - every node should have 1539537083 before to migrate to this release, because  /cdn/states is removed.