@@ -53,7 +53,7 @@ const httpserver = http.createServer((req, res) => {
     res.end(image1x1);
   } else if (req.url.startsWith("/cdn/penalite")) {
     res.writeHead(200, { 'Content-Type': 'text/plain' });
-    res.end('' + (cdnboxStates.local.config.penal + Math.floor(cdnboxStates.penalbucket.sigma / 4)) + '\n');
+    res.end('' + cdnboxStates.local.config.penal + '\n');
   } else if (req.url.startsWith("/cdn/whoami")) {
     var xip = req.headers['x-forwarded-for'];
     res.writeHead(204, { 'X-IP': xip?xip:res.socket.remoteAddress });
@@ -297,7 +297,7 @@ function htmlcdnboxes(req,res) {
       Math.round(cdnboxStates.globaldnscount.average) + '/' +
       Math.round(cdnboxStates.globaldnscount.limit) + '</span></div>' +
       '<table><tr><th>Name</th><th>Trans</th><th>BwT</th><th>Recv</th><th>Perf4</th><th>Perf6</th><th>Score</th>' +
-      '<th>Bu.</th><th>HTTP</th><th>DNS</th><th>Tests</th></tr>'
+      '<th>HTTP</th><th>DNS</th><th>Tests</th></tr>'
   );
   for (var i=0; i < cdnboxStates.config.cdnboxes.length; i++ ) {
     var cdnboxState = cdnboxStates[cdnboxStates.config.cdnboxes[i].name];
@@ -324,7 +324,6 @@ function htmlcdnboxes(req,res) {
     }
     res.write(
         '<td class="number">' + (cdnboxState.score !== undefined?Math.round(cdnboxState.score):'NA') + '</td>' +
-        '<td class="number">' + Math.floor(cdnboxState.bucket) + '</td>' +
         '<td class="status">' +
         (cdnboxState.config.ishttp?(cdnboxState.status == 'on'?
             cdnboxState.dnscount.last:
@@ -487,9 +486,6 @@ function apiStates(req,res) {
           '"targetbw": "' + cdnboxState.config.targetbw + '", ' +
           '"perftime": "' + cdnboxState.gettime + '", ' +
           '"score": "' + cdnboxState.score + '", ' +
-          '"penal": "' + Math.floor(cdnboxState.config.penal + cdnboxStates.penalbucket.sigma) + '", ' +
-          '"bucket": "' + cdnboxState.bucket + '", ' +
-          '"globalpenal": "' + Math.floor(cdnboxState.config.penal + cdnboxStates.penalbucket.sigma) + '", ' +
           '"status": "' + cdnboxState.status + '", ' +
           '"ishttp": ' + cdnboxState.config.ishttp + ', ' +
           '"localtests": ' + JSON.stringify(cdnboxState.localtests) + ', ' +
@@ -658,6 +654,7 @@ process.on('uncaughtException', (err) => {
     console.log(' "type": "error", "error": "uncaughtException ECONNRESET"');
   } else {
     console.error('Process uncaught: ' + err);
+    console.error('Process uncaught details: %s %s %s', err.code, err.errno, err.syscall);
     console.error(err.stack);
     process.exit(1);
   }
