@@ -72,8 +72,6 @@ cdnboxStates.loadconfig = function () {
 
   lconfig.cdnboxes.forEach(function(cdnbox) {
     cdnboxStates[cdnbox.name] = { "config": cdnbox,
-        "bucket": cdnboxStates[cdnbox.name] !== undefined && cdnboxStates[cdnbox.name].bucket !== undefined?
-                  cdnboxStates[cdnbox.name].bucket:0,
         "dnscount": cdnboxStates[cdnbox.name] === undefined || cdnboxStates[cdnbox.name].dnscount === undefined?
                     { "current": 0, "average": lconfig.dnsserver.dnscountavgmin }:
                     cdnboxStates[cdnbox.name].dnscount
@@ -98,7 +96,6 @@ cdnboxStates.loadconfig = function () {
     if (cdnbox.localtests === undefined) { cdnbox.localtests = []; }
     cdnboxStates[cdnbox.name].localtests = {};
   });
-  if (lconfig.states === undefined) { lconfig.states = { "penalgdown": 120 }; } 
   if (lconfig.clustersecret === undefined) { lconfig.clustersecret = lconfig.httpserver.authorization; }
   if (lconfig.varnishmetrics !== undefined) { cdnboxStates.varnishmetrics = {}; }
   if (lconfig.varnishmetricsoutput === undefined) { lconfig.varnishmetricsoutput = "log"; }
@@ -108,38 +105,6 @@ cdnboxStates.loadconfig();
 
 cdnboxStates.writeconfig = function (config) {
   fs.writeFileSync('./config.json', JSON.stringify(config, null, '  '));
-}
-
-// penal bucket
-cdnboxStates.penalbucket = { "time": Date.now(), "count": 0, "sigma": 0 };
-
-cdnboxStates.penalbucket.increase = function () {
-  this.get();
-  this.count += 0.1;
-  this.calcsigma();
-}
-
-cdnboxStates.penalbucket.calcsigma = function () {
-  var sigmabucket = 0;
-  var lconfig = cdnboxStates.config;
-  for (var i=0; i < lconfig.cdnboxes.length; i++ ) {
-    if (cdnboxStates[lconfig.cdnboxes[i].name].bucket !== undefined) {
-      sigmabucket += cdnboxStates[lconfig.cdnboxes[i].name].bucket;
-    }
-  }
-  this.sigma = sigmabucket;
-}
-
-cdnboxStates.penalbucket.get = function () {
-  var lconfig = cdnboxStates.config;
-  var newtime = Date.now();
-  this.count -= (newtime - this.time) / lconfig.states.penalgdown / 1000;
-  this.time = newtime;
-  if (this.count < 0) { this.count = 0; }
-  cdnboxStates.local.bucket = this.count;
-  calcScore(cdnboxStates.local);
-  this.calcsigma();
-  return Math.floor(this.count);
 }
 
 var cdnboxDNSserver;
@@ -195,7 +160,7 @@ cdnboxStates.init = async function (DNSserverclass, choose) {
                 } else if (cdnboxStates.address2iface[cdnboxState.ipv4]) {
                   cdnboxState.netint = cdnboxStates.address2iface[cdnboxState.ipv4];
                 }
-                testCDNBoxes();
+                setTimeout(testCDNBoxes, 500);
                 getnetcount(cdnboxState);
                 cdnboxState.bw = lconfig.dnsserver.dnsthrottlebwratio * cdnbox.targetbw + 1;
                 cdnboxState.trendbw = cdnbox.targetbw;
@@ -225,10 +190,10 @@ cdnboxStates.init = async function (DNSserverclass, choose) {
                 cdnboxState.ipv6 = cdnboxStates.hasipv6;
                 cdnboxState.ipv6tab = convertIPv6totab(cdnboxStates.hasipv6);
                 cdnboxState.status6 = 'fail';
-                cdnboxDNSserver.serveIPv6(cdnboxState.ipv6);
               }
             });
-          } else if (cdnboxState.ipv6) {
+          }
+	  if (cdnboxState.ipv6) {
             cdnboxDNSserver.serveIPv6(cdnboxState.ipv6);
 	  }
         }
@@ -263,7 +228,6 @@ function calcbw(cdnboxState) {
   let deltarecv = cdnboxState.netrecvcount - memrecvcount;
   if (deltarecv < 0) { deltarecv = 0 }
   cdnboxState.bwrecv = deltarecv * 8 / (cdnboxState.nettime - memtime) * 1000 / 1024 / 1024;
-  if (cdnboxState.bw > 1.1 * cdnboxState.config.targetbw) { cdnboxStates.penalbucket.increase(); }
   var statevector = cdnboxStates.getstatevector();
   var cdnboxlist = Object.getOwnPropertyNames(cdnboxStates.subscribestate);
   for (var i = 0; i < cdnboxlist.length; i++) {
@@ -271,7 +235,6 @@ function calcbw(cdnboxState) {
   }
   console.log(' "type": "bw", "bw": ' + cdnboxState.bw + ', "trendbw": ' + cdnboxState.trendbw + ' ,' +
 	      '"bwrecv": ' + cdnboxState.bwrecv + ' ,' + 
-              '"penal": ' + Math.floor(cdnboxStates.local.config.penal + cdnboxStates.penalbucket.sigma / 4) + ', ' +
               '"score": '+ (isNaN(cdnboxState.score)?-1:cdnboxState.score) + ', "vol": ' + delta);
 }
 
@@ -281,8 +244,7 @@ cdnboxStates.getstatevector = function() {
     var hash = crypto.createHmac('sha256', cdnboxStates.config.clustersecret);
     hash.update(cdnboxState.config.name + (cdnboxState.bw !== undefined?cdnboxState.bw:-1) +
                 (cdnboxState.trendbw !== undefined?cdnboxState.trendbw:-1) + time +
-                cdnboxState.status + JSON.stringify(cdnboxState.localtests) +
-                cdnboxStates.penalbucket.get());
+                cdnboxState.status + JSON.stringify(cdnboxState.localtests) + '0');
     return '{"name":"' + cdnboxState.config.name + '", ' +
            '"bw":' + (cdnboxState.bw !== undefined?cdnboxState.bw:-1) + ', ' +
            '"bwrecv":' + (cdnboxState.bwrecv !== undefined?cdnboxState.bwrecv:-1) + ', ' +
@@ -291,7 +253,7 @@ cdnboxStates.getstatevector = function() {
            '"status":"' + cdnboxState.status + '", ' +
            '"status6":"' + cdnboxState.status6 + '", ' +
            '"localtests":' + JSON.stringify(cdnboxState.localtests) + ', ' +
-           '"penalbucket":' + cdnboxStates.penalbucket.get() + ',' +
+           '"penalbucket": 0,' +
            '"hmac":"' + hash.digest('base64') + '"}';
 }
 
@@ -300,7 +262,7 @@ cdnboxStates.putstatevectorhmac = function(statevector) {
     var data = JSON.parse(statevector);
     var hash = crypto.createHmac('sha256', cdnboxStates.config.clustersecret);
     hash.update(data.name + data.bw + data.trendbw + data.timestamp + data.status +
-                JSON.stringify(data.localtests) + data.penalbucket);
+                JSON.stringify(data.localtests) + (data.penalbucket !== undefined ? data.penalbucket : ''));
     if (hash.digest('base64') == data.hmac) {
       putstatevectorobj(data);
     } else {
@@ -327,10 +289,6 @@ function putstatevectorobj (data) {
     if (data.status == 'off' || cdnboxState.status !== 'fail') { cdnboxState.status = data.status; }
     if (data.status6 !== undefined && (data.status6 == 'off' || cdnboxState.status6 !== 'fail')) {
       cdnboxState.status6 = data.status6;
-    }
-    if (cdnboxState.bucket != data.penalbucket) {
-      cdnboxState.bucket = data.penalbucket;
-      cdnboxStates.penalbucket.calcsigma();
     }
     cdnboxState.pushupdate = Date.now();
     cdnboxState.localtests = (data.localtests === undefined?{}:data.localtests);
@@ -381,12 +339,6 @@ function subscriberemotebw(cdnbox) {
       cdnboxStates[cdnbox.name].ipv4);
 }
 
-function calcScore(cdnboxState) {
-  if (cdnboxState.config.fixscore === undefined && cdnboxState.status === 'on') {
-    cdnboxState.score = cdnboxState.gettime + cdnboxState.config.addscore + cdnboxState.bucket;
-  }
-}
-
 // probes perf
 var probeChild;
 function getPerf(cdnbox) {
@@ -403,10 +355,8 @@ function getPerf(cdnbox) {
           var cdnboxState = cdnboxStates[msg.name];
 	  if (msg.ipv == 4) {
 	    cdnboxState.perflastupdate = Date.now();
-            cdnboxState.gettime = msg.perf;
 	  } else { 
 	    cdnboxState.perflastupdate6 = Date.now(); 
-            cdnboxState.gettime6 = msg.perf;
 	  }
 	  // detection de changement d'IP.
 	  if (cdnboxState !== cdnboxStates.local && !cdnboxState.config.cname) {
@@ -434,12 +384,16 @@ function getPerf(cdnbox) {
 	  }
 
 	  if (msg.status === 200) {
-            // give local trafic a bonus.
 	    if (msg.ipv == 4) { 
-              if (cdnboxState.config === cdnboxStates.local.config) { cdnboxState.gettime = Math.round(cdnboxState.gettime / 2); }
-              calcScore(cdnboxState);
+              cdnboxState.gettime = msg.perf;
+              // give local trafic a bonus.
+              if (cdnboxState.config === cdnboxStates.local.config) {
+		cdnboxState.gettime = Math.round(cdnboxState.gettime / 2);
+	      }
+              cdnboxState.score = cdnboxState.gettime + cdnboxState.config.addscore;
 	      if (cdnboxState.status === 'fail') { cdnboxState.status = 'on'; }
 	    } else {
+              cdnboxState.gettime6 = msg.perf;
 	      if (cdnboxState.status6 === 'fail') { cdnboxState.status6 = 'on'; }
 	    }
           } else {
@@ -641,7 +595,6 @@ function writetlsticketkeys() {
 
 async function testCDNBoxes() {
   if (cdnboxStates.local.config.name === undefined) { throw "Local CDNBox not detected."; }
-  cdnboxStates.penalbucket.get();
   cdnboxStates.config.cdnboxes.forEach(function(cdnbox) { getPerf(cdnbox); });
   // localtests
   if (cdnboxStates.local.config.localtests) dolocaltests(cdnboxStates.local);
